Create crud for goals and users, create rest file for testing, update swagger autogen
