# backend/routes/users.js
@@ -1,8 +1,21 @@
 const express = require('express');
 const router = express.Router();
 
-router.get('/', (req, res) => {
-    res.send('Users route working');
-});
+const {
+	getAllUsers,
+	getUserById,
+	createUser,
+	updateUser,
+	deleteUser
+} = require('../controllers/users');
+
+// Base Routes
+router.get('/', getAllUsers);
+router.post('/', createUser);
+
+// ID Routes
+router.get('/:id', getUserById);
+router.put('/:id', updateUser);
+router.delete('/:id', deleteUser);
 
 module.exports = router;
